--- a/index.html
+++ b/index.html
@@ -128,7 +128,8 @@
 						<strong>Conversational agents</strong> that are value-aware and socially intelligent
 					</li>
 					<li>
-						<strong>Multimodal learning</strong> in vision-and-language applications (e.g., VQA, captioning)
+						<strong>Multimodal learning</strong> in vision-and-language applications (e.g., VQA, image
+						captioning)
 					</li>
 				</ul>
 				</p>
@@ -167,6 +168,16 @@
 		<h3 id="News" style="">News</h3>
 		<hr>
 		<ul>
+			<li>
+				<strong>[09/2022]&nbsp; <font color="red">New!</font></strong>
+				One paper on dynamic prompt learning for math reasoning is submitted to <b>Preprint</b>.
+			</li>
+			<li>
+				<strong>[09/2022]&nbsp; <font color="red">New!</font></strong>
+				One paper on chain-of-thought reasoning for
+				<b><a href="https://scienceqa.github.io/" target="_blank">ScienceQA</a></b>
+				is accepted to <b>NeurIPS 2022</b>.
+			</li>
 			<li>
 				<strong>[09/2022]&nbsp; <font color="red">New!</font></strong>
 				One paper on chain-of-thought reasoning for
@@ -255,6 +266,30 @@
 		<hr>
 		<!-- <font color="black">(* indicate equal contribution)</font><br><hr> -->
 
+		<!-- TabMWP -->
+		<div class="row">
+			<div class="col-md-3">
+				<img class="img-fluid img-rounded" src="imgs/arxiv22_dynamic2.png" style="" alt="">
+			</div>
+			<div class="col-md-9">
+				<b>
+					<font color="black">Dynamic Prompt Learning via Policy Gradient for Semi-structured Mathematical
+						Reasoning
+					</font>
+				</b><br>
+				<b>Pan Lu</b>, Liang Qiu, Kai-Wei Chang, Ying Nian Wu, Song-Chun Zhu, Tanmay Rajpurohit, Peter Clark,
+				Ashwin Kalyan<br>
+				<b><a href="https://nips.cc/" target="_blank">arXiv:2209.14610&nbsp;</a></b>
+				<a href="https://arxiv.org/abs/2209.14610" target="_blank"> <small>[Paper]&nbsp;</small></a>
+				<a href="papers/arxiv22_dynamic.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
+				<a href="https://https://tabmwp.github.io/" target="_blank"> <small>[Project]&nbsp;</small></a>
+				<a> <small>[Data]&nbsp;</small></a>
+				<a> <small>[Code]&nbsp;</small></a>
+				<a href="bibs/arxiv22_dynamic.txt" target="_blank"> <small>[BibTex]</small></a><br>
+			</div>
+		</div>
+		<hr>
+
 		<!-- ScienceQA -->
 		<div class="row">
 			<div class="col-md-3">
@@ -272,6 +307,8 @@
 				<a href="https://arxiv.org/abs/2209.09513" target="_blank"> <small>[Paper]&nbsp;</small></a>
 				<a href="papers/neurips22_scienceqa.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
 				<a href="https://scienceqa.github.io/" target="_blank"> <small>[Project]&nbsp;</small></a>
+				<a> <small>[Data]&nbsp;</small></a>
+				<a> <small>[Code]&nbsp;</small></a>
 				<a href="bibs/neurips22_scienceqa.txt" target="_blank"> <small>[BibTex]</small></a><br>
 			</div>
 		</div>
