--- a/index.html
+++ b/index.html
@@ -279,10 +279,10 @@
 				</b><br>
 				<b>Pan Lu</b>, Liang Qiu, Kai-Wei Chang, Ying Nian Wu, Song-Chun Zhu, Tanmay Rajpurohit, Peter Clark,
 				Ashwin Kalyan<br>
-				<b><a href="https://nips.cc/" target="_blank">arXiv:2209.14610&nbsp;</a></b>
+				<b><a href="https://arxiv.org/abs/2209.14610" target="_blank">arXiv:2209.14610&nbsp;</a></b>
 				<a href="https://arxiv.org/abs/2209.14610" target="_blank"> <small>[Paper]&nbsp;</small></a>
 				<a href="papers/arxiv22_dynamic.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
-				<a href="https://https://tabmwp.github.io/" target="_blank"> <small>[Project]&nbsp;</small></a>
+				<a href="https://tabmwp.github.io/" target="_blank"> <small>[Project]&nbsp;</small></a>
 				<a> <small>[Data]&nbsp;</small></a>
 				<a> <small>[Code]&nbsp;</small></a>
 				<a href="bibs/arxiv22_dynamic.txt" target="_blank"> <small>[BibTex]</small></a><br>
