--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
 		<!-- TabMWP -->
 		<div class="row">
 			<div class="col-md-3">
-				<img class="img-fluid img-rounded" src="imgs/arxiv22_dynamic2.png" style="" alt="">
+				<img class="img-fluid img-rounded" src="imgs/arxiv22_dynamic.png" style="" alt="">
 			</div>
 			<div class="col-md-9">
 				<b>
