--- a/index.html
+++ b/index.html
@@ -169,8 +169,14 @@
 		<hr>
 		<ul>
 			<li>
+				<strong>[10/2022]&nbsp; <font color="red">New!</font></strong>
+				Two papers on mathematical reasoning are accepted to <b>EMNLP 2022</b>.
+			</li>
+			<li>
 				<strong>[09/2022]&nbsp; <font color="red">New!</font></strong>
-				One paper on dynamic prompt learning for math reasoning is submitted to <b>Preprint</b>.
+				One paper on dynamic prompt learning for math reasoning
+				(<b><a href="https://tabmwp.github.io/" target="_blank">PromptPG</a></b>)
+				is submitted to <b>Preprint</b>.
 			</li>
 			<li>
 				<strong>[09/2022]&nbsp; <font color="red">New!</font></strong>
@@ -207,8 +213,9 @@
 			</li>
 			<li>
 				<strong>[10/2021]&nbsp; <font color="red">New!</font></strong>
-				One paper on visual question answering for icon images (<b><a href="https://iconqa.github.io/"
-						target="_blank">IconQA</a></b>) is accepted to <b>NeurIPS 2021</b></font></b>.
+				One paper on visual question answering for icon images
+				(<b><a href="https://iconqa.github.io/" target="_blank">IconQA</a></b>)
+				is accepted to <b>NeurIPS 2021</b>.
 			</li>
 			<li>
 				<strong>[07/2021]&nbsp;</strong>
@@ -217,20 +224,20 @@
 			</li>
 			<li>
 				<strong>[07/2021]&nbsp; </strong>
-				Our workshop proposal for Math AI for Education (MATHAI4ED) is accepted to <b>NeurIPS 2021</b></font>
-				</b>.
+				Our workshop proposal for Math AI for Education (MATHAI4ED) is accepted to <b>NeurIPS 2021</b></font>.
+				</b>
 			</li>
 			<li>
 				<strong>[05/2021]&nbsp; </strong>
 				One paper on interpretable geometry problem solving is accepted to <b>ACL 2021</b> as an <b>
-					<font color="red">Oral Presentation</font>
-				</b>.
+					<font color="red">Oral Presentation</font>.
+				</b>
 			</li>
 			<li>
 				<strong>[05/2021]&nbsp; </font>
 				</strong> One paper on social relation inference in dialogues is accepted to <b>ACL 2021</b> as an <b>
-					<font color="red">Oral Presentation</font>
-				</b>.
+					<font color="red">Oral Presentation</font>.
+				</b>
 			</li>
 			<li>
 				<strong>[03/2021]</strong> One paper on socially intelligent agents is submitted to <b>Preprint</b>.
@@ -241,14 +248,14 @@
 			<li>
 				<strong>[05/2019]</strong> One paper on knowledge aware image-text matching is accepted to <b>IJCAI
 					2019</b> as an <b>
-					<font color="red">Oral Presentation</font>
-				</b>.
+					<font color="red">Oral Presentation</font>.
+				</b>
 			</li>
 			<li>
 				<strong>[03/2019]</strong> One paper on dynamic fusion for visual question answering is accepted to
 				<b>CVPR 2019</b> as an <b>
-					<font color="red">Oral Presentation</font>
-				</b>.
+					<font color="red">Oral Presentation</font>.
+				</b>
 			</li>
 		</ul>
 	</div><br>
@@ -259,6 +266,50 @@
 		<h3 id="Publications" style="">Selected Publications</h3>
 		<hr>
 		<!-- <font color="black">(* indicate equal contribution)</font><br><hr> -->
+
+
+		<!-- Lila -->
+		<div class="row">
+			<div class="col-md-3">
+				<img class="img-fluid img-rounded" src="imgs/emnlp22_lila.png" style="" alt="">
+			</div>
+			<div class="col-md-9">
+				<b>
+					<font color="black">LILA: A Unified Benchmark for Mathematical Reasoning</font>
+				</b><br>
+				Swaroop Mishra*, Matthew Finlayson*, <b>Pan Lu</b>, Leonard Tang, Sean Welleck, Chitta Baral, Tanmay
+				Rajpurohit,
+				Oyvind Tafjord, Ashish Sabharwal, Peter Clark, Ashwin K. Kalyan
+				<br>
+				<b><a href="https://2022.emnlp.org/" target="_blank">EMNLP 2022&nbsp;</a></b>
+				<a> <small>[Paper]&nbsp;</small></a>
+				<a href="papers/emnlp22_lila.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
+				<a> <small>[Code]&nbsp;</small></a>
+				<a href="bibs/emnlp22_lila.txt" target="_blank"> <small>[BibTex]</small></a><br>
+			</div>
+		</div>
+		<hr>
+
+		<!-- UniGeo -->
+		<div class="row">
+			<div class="col-md-3">
+				<img class="img-fluid img-rounded" src="imgs/emnlp22_unigeo.png" style="" alt="">
+			</div>
+			<div class="col-md-9">
+				<b>
+					<font color="black">UniGeo: Unifying Geometry Logical Reasoning via Reformulating Mathematical
+						Expression</font>
+				</b><br>
+				Jiaqi Chen, Tong Li, Jinghui Qin, <b>Pan Lu</b>, Liang Lin, Chongyu Chen and Xiaodan Liang
+				<br>
+				<b><a href="https://2022.emnlp.org/" target="_blank">EMNLP 2022&nbsp;</a></b>
+				<a> <small>[Paper]&nbsp;</small></a>
+				<a href="papers/emnlp22_unigeo.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
+				<a> <small>[Code]&nbsp;</small></a>
+				<a href="bibs/emnlp22_unigeo.txt" target="_blank"> <small>[BibTex]</small></a><br>
+			</div>
+		</div>
+		<hr>
 
 		<!-- TabMWP -->
 		<div class="row">
