--- a/index.html
+++ b/index.html
@@ -863,9 +863,9 @@
 			</ul>
 			<h4 id="Service" style="">Program Committee Member</h3>
 				<ul>
-					<li> <strong>2023</strong>: AAAI</li>
-					<li> <strong>2022</strong>: COLING, NeurIPS, CVPR, AAAI, ICLR</li>
-					<li> <strong>2021</strong>: NeurIPS, ICCV, ICLR, CVPR</li>
+					<li> <strong>2023</strong>: ICLR, AAAI</li>
+					<li> <strong>2022</strong>: ICLR, NeurIPS, CVPR, AAAI, COLING</li>
+					<li> <strong>2021</strong>: ICLR, NeurIPS, CVPR, ICCV</li>
 					<li> <strong>2020</strong>: NeurIPS </li>
 					<li> <strong>2019 and before</strong>: AAAI, SIGKDD, ICDM, PAKDD</li>
 				</ul>
