--- a/index.html
+++ b/index.html
@@ -170,6 +170,10 @@
 		<ul>
 			<li>
 				<strong>[10/2022]&nbsp; <font color="red">New!</font></strong>
+				Happy to receive the <b>NeurIPS 2022 Scholar Award</b>!
+			</li>
+			<li>
+				<strong>[10/2022]&nbsp; <font color="red">New!</font></strong>
 				Two papers on mathematical reasoning are accepted to <b>EMNLP 2022</b>.
 			</li>
 			<li>
@@ -883,6 +887,7 @@
 		<h3 id="Honors" style="">Selected Honors</h3>
 		<hr>
 		<ul>
+			<li><strong>NeurIPS Scholar Award</strong>, 2022</li>
 			<li><strong>NeurIPS Travel Award</strong>, 2019</li>
 			<li><strong>ICCV Travel Award</strong>, 2019</li>
 			<li><strong>Outstanding Master Thesis Award</strong>, Tsinghua University, 2018</li>
