--- a/index.html
+++ b/index.html
@@ -355,8 +355,9 @@
 				<a href="https://arxiv.org/abs/2209.09513" target="_blank"> <small>[Paper]&nbsp;</small></a>
 				<a href="papers/neurips22_scienceqa.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
 				<a href="https://scienceqa.github.io/" target="_blank"> <small>[Project]&nbsp;</small></a>
-				<a> <small>[Data]&nbsp;</small></a>
-				<a> <small>[Code]&nbsp;</small></a>
+				<a href="https://drive.google.com/drive/u/1/folders/1w8imCXWYn2LxajmGeGH_g5DaL2rabHev" target="_blank">
+					<small>[[Data]&nbsp;</small></a>
+				<a href="https://github.com/lupantech/ScienceQA" target="_blank"> <small>[[Code]&nbsp;</small></a>
 				<a href="bibs/neurips22_scienceqa.txt" target="_blank"> <small>[BibTex]</small></a><br>
 			</div>
 		</div>
