--- a/index.html
+++ b/index.html
@@ -295,6 +295,33 @@
 		</div>
 		<hr>
 
+		<!-- ScienceQA -->
+		<div class="row">
+			<div class="col-md-3">
+				<img class="img-fluid img-rounded" src="imgs/neurips22_scienceqa.png" style="" alt="">
+			</div>
+			<div class="col-md-9">
+				<b>
+					<font color="black">Learn to Explain: Multimodal Reasoning via Thought Chains for Science Question
+						Answering</font>
+				</b><br>
+				<b>Pan Lu</b>, Swaroop Mishra, Tony Xia, Liang Qiu, Kai-Wei Chang, Song-Chun Zhu, Oyvind Tafjord, Peter
+				Clark,
+				Ashwin Kalyan<br>
+				<b><a href="https://nips.cc/" target="_blank">NeurIPS 2022&nbsp;</a></b>
+				<a href="https://arxiv.org/abs/2209.09513" target="_blank"> <small>[Paper]&nbsp;</small></a>
+				<a href="papers/neurips22_scienceqa.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
+				<a href="https://scienceqa.github.io/" target="_blank"> <small>[Project]&nbsp;</small></a>
+				<a href="https://drive.google.com/drive/u/1/folders/1w8imCXWYn2LxajmGeGH_g5DaL2rabHev" target="_blank">
+					<small>[Data]&nbsp;</small></a>
+				<a href="https://github.com/lupantech/ScienceQA" target="_blank"> <small>[Code]&nbsp;</small></a>
+				<a href="https://scienceqa.github.io/explore.html" target="_blank"> <small>[Explore]&nbsp;</small></a>
+				<a href="https://scienceqa.github.io/leaderboard.html" target="_blank"> <small>[Leaderboard]&nbsp;</small></a>
+				<a href="bibs/neurips22_scienceqa.txt" target="_blank"> <small>[BibTex]</small></a><br>
+			</div>
+		</div>
+		<hr>
+
 		<!-- Lila -->
 		<div class="row">
 			<div class="col-md-3">
@@ -334,31 +361,6 @@
 				<a href="papers/emnlp22_unigeo.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
 				<a> <small>[Code]&nbsp;</small></a>
 				<a href="bibs/emnlp22_unigeo.txt" target="_blank"> <small>[BibTex]</small></a><br>
-			</div>
-		</div>
-		<hr>
-
-		<!-- ScienceQA -->
-		<div class="row">
-			<div class="col-md-3">
-				<img class="img-fluid img-rounded" src="imgs/neurips22_scienceqa.png" style="" alt="">
-			</div>
-			<div class="col-md-9">
-				<b>
-					<font color="black">Learn to Explain: Multimodal Reasoning via Thought Chains for Science Question
-						Answering</font>
-				</b><br>
-				<b>Pan Lu</b>, Swaroop Mishra, Tony Xia, Liang Qiu, Kai-Wei Chang, Song-Chun Zhu, Oyvind Tafjord, Peter
-				Clark,
-				Ashwin Kalyan<br>
-				<b><a href="https://nips.cc/" target="_blank">NeurIPS 2022&nbsp;</a></b>
-				<a href="https://arxiv.org/abs/2209.09513" target="_blank"> <small>[Paper]&nbsp;</small></a>
-				<a href="papers/neurips22_scienceqa.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
-				<a href="https://scienceqa.github.io/" target="_blank"> <small>[Project]&nbsp;</small></a>
-				<a href="https://drive.google.com/drive/u/1/folders/1w8imCXWYn2LxajmGeGH_g5DaL2rabHev" target="_blank">
-					<small>[[Data]&nbsp;</small></a>
-				<a href="https://github.com/lupantech/ScienceQA" target="_blank"> <small>[[Code]&nbsp;</small></a>
-				<a href="bibs/neurips22_scienceqa.txt" target="_blank"> <small>[BibTex]</small></a><br>
 			</div>
 		</div>
 		<hr>
