--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 		<ul>
 			<li>
 				<strong>[10/2022]&nbsp; <font color="red">New!</font></strong>
-				Happy to receive the <b>NeurIPS 2022 Scholar Award</b>!
+				Happy to receive the <b>NeurIPS 2022 Scholar Award</b>.
 			</li>
 			<li>
 				<strong>[10/2022]&nbsp; <font color="red">New!</font></strong>
@@ -196,6 +196,12 @@
 			<li>
 				<strong>[07/2022]&nbsp; <font color="red">New!</font></strong>
 				One paper on socially intelligent agents is accepted to <b>SIGDIAL 2022</b>.
+			</li>
+			<li>
+				<strong>[04/2022]&nbsp; <font color="red">New!</font></strong>
+				Excited to be listed as a
+				<b><a href="https://iclr.cc/Conferences/2022/Reviewers" target="_blank">Highlighted Reviewer</a></b>
+				for ICLR 2022.
 			</li>
 			<strong>[03/2022]&nbsp; <font color="red">New!</font></strong>
 			I am excited to join <b><a href="https://allenai.org/" target="_blank">Allen Institute for AI (AI2)</a></b>
@@ -316,7 +322,8 @@
 					<small>[Data]&nbsp;</small></a>
 				<a href="https://github.com/lupantech/ScienceQA" target="_blank"> <small>[Code]&nbsp;</small></a>
 				<a href="https://scienceqa.github.io/explore.html" target="_blank"> <small>[Explore]&nbsp;</small></a>
-				<a href="https://scienceqa.github.io/leaderboard.html" target="_blank"> <small>[Leaderboard]&nbsp;</small></a>
+				<a href="https://scienceqa.github.io/leaderboard.html" target="_blank">
+					<small>[Leaderboard]&nbsp;</small></a>
 				<a href="bibs/neurips22_scienceqa.txt" target="_blank"> <small>[BibTex]</small></a><br>
 			</div>
 		</div>
@@ -871,7 +878,8 @@
 			<h4 id="Service" style="">Program Committee Member</h3>
 				<ul>
 					<li> <strong>2023</strong>: ICLR, AAAI</li>
-					<li> <strong>2022</strong>: ICLR, NeurIPS, CVPR, AAAI, COLING</li>
+					<li> <strong>2022</strong>: ICLR (<strong>Highlighted Reviewers</strong>), NeurIPS, CVPR, AAAI,
+						COLING</li>
 					<li> <strong>2021</strong>: ICLR, NeurIPS, CVPR, ICCV</li>
 					<li> <strong>2020</strong>: NeurIPS </li>
 					<li> <strong>2019 and before</strong>: AAAI, SIGKDD, ICDM, PAKDD</li>
