--- a/index.html
+++ b/index.html
@@ -344,9 +344,12 @@
 				<br>
 				<b><a href="https://2022.emnlp.org/" target="_blank">EMNLP 2022&nbsp;</a></b>
 				<a> <small>[Paper]&nbsp;</small></a>
-				<a href="papers/emnlp22_lila.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
-				<a> <small>[Code]&nbsp;</small></a>
-				<a href="bibs/emnlp22_lila.txt" target="_blank"> <small>[BibTex]</small></a><br>
+				<a href="papers/emnlp22_unigeo.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
+				<a href="https://github.com/allenai/Lila" target="_blank"> <small>[Data]&nbsp;</small></a>
+				<a href="https://github.com/allenai/Lila" target="_blank"> <small>[Code]&nbsp;</small></a>
+				<a href="https://huggingface.co/allenai/bhaskara" target="_blank">
+					<small>[Huggingface]&nbsp;</small></a>
+				<a href="bibs/emnlp22_unigeo.txt" target="_blank"> <small>[BibTex]</small></a><br>
 			</div>
 		</div>
 		<hr>
