--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
 		<!-- TabMWP -->
 		<div class="row">
 			<div class="col-md-3">
-				<img class="img-fluid img-rounded" src="imgs/arxiv22_dynamic.png" style="" alt="">
+				<img class="img-fluid img-rounded" src="imgs/arxiv22_promptpg.png" style="" alt="">
 			</div>
 			<div class="col-md-9">
 				<b>
@@ -292,11 +292,15 @@
 				Ashwin Kalyan<br>
 				<b><a href="https://arxiv.org/abs/2209.14610" target="_blank">arXiv:2209.14610&nbsp;</a></b>
 				<a href="https://arxiv.org/abs/2209.14610" target="_blank"> <small>[Paper]&nbsp;</small></a>
-				<a href="papers/arxiv22_dynamic.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
-				<a href="https://tabmwp.github.io/" target="_blank"> <small>[Project]&nbsp;</small></a>
-				<a> <small>[Data]&nbsp;</small></a>
-				<a> <small>[Code]&nbsp;</small></a>
-				<a href="bibs/arxiv22_dynamic.txt" target="_blank"> <small>[BibTex]</small></a><br>
+				<a href="papers/arxiv22_promptpg.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
+				<a href="https://promptpg.github.io/" target="_blank"> <small>[Project]&nbsp;</small></a>
+				<a href="https://drive.google.com/drive/folders/1IYgGrY9agwF_qQlh4WNRG_4WF_ggTkvG?usp=sharing"
+					target="_blank"> <small>[Data]&nbsp;</small></a>
+				<a href="https://github.com/lupantech/PromptPG" target="_blank"> <small>[Code]&nbsp;</small></a>
+				<a href="https://promptpg.github.io/explore.html" target="_blank"> <small>[Explore]&nbsp;</small></a>
+				<a href="https://promptpg.github.io/leaderboard.html" target="_blank">
+					<small>[Leaderboard]&nbsp;</small></a>
+				<a href="bibs/arxiv22_promptpg.txt" target="_blank"> <small>[BibTex]</small></a><br>
 			</div>
 		</div>
 		<hr>
