--- a/index.html
+++ b/index.html
@@ -283,6 +283,9 @@
 				<img class="img-fluid img-rounded" src="imgs/arxiv22_promptpg.png" style="" alt="">
 			</div>
 			<div class="col-md-9">
+				<a href="https://promptpg.github.io/">
+					<img src="logos/promptpg.png" id="logo">
+				</a>
 				<b>
 					<font color="black">Dynamic Prompt Learning via Policy Gradient for Semi-structured Mathematical
 						Reasoning
@@ -311,6 +314,9 @@
 				<img class="img-fluid img-rounded" src="imgs/neurips22_scienceqa.png" style="" alt="">
 			</div>
 			<div class="col-md-9">
+				<a href="https://scienceqa.github.io/">
+					<img src="logos/scienceqa.png" id="logo">
+				</a>
 				<b>
 					<font color="black">Learn to Explain: Multimodal Reasoning via Thought Chains for Science Question
 						Answering</font>
@@ -483,6 +489,9 @@
 				<img class="img-fluid img-rounded" src="imgs/neurips21_iconqa.png" style="" alt="">
 			</div>
 			<div class="col-md-9">
+				<a href="https://iconqa.github.io/">
+					<img src="logos/iconqa.png" id="logo">
+				</a>
 				<b>
 					<font color="black">IconQA: A New Benchmark for Abstract Diagram Understanding and Visual Language
 						Reasoning</font>
@@ -506,6 +515,9 @@
 				<img class="img-fluid img-rounded" src="imgs/acl21_gps.png" style="" alt="">
 			</div>
 			<div class="col-md-9">
+				<a href="https://lupantech.github.io/inter-gps/">
+					<img src="logos/intergps.svg" id="logo">
+				</a>
 				<b>
 					<font color="black">Inter-GPS: Interpretable Geometry Problem Solving with Formal Language and
 						Symbolic Reasoning</font>
