--- a/index.html
+++ b/index.html
@@ -345,6 +345,9 @@
 				<img class="img-fluid img-rounded" src="imgs/emnlp22_lila.png" style="" alt="">
 			</div>
 			<div class="col-md-9">
+				<a href="https://lila.apps.allenai.org/"  style="font-size:20pt">
+					📜
+				</a>
 				<b>
 					<font color="black">LILA: A Unified Benchmark for Mathematical Reasoning</font>
 				</b><br>
@@ -353,8 +356,9 @@
 				Oyvind Tafjord, Ashish Sabharwal, Peter Clark, Ashwin K. Kalyan
 				<br>
 				<b><a href="https://2022.emnlp.org/" target="_blank">EMNLP 2022&nbsp;</a></b>
-				<a> <small>[Paper]&nbsp;</small></a>
-				<a href="papers/emnlp22_unigeo.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
+				<a href="https://arxiv.org/abs/2210.17517" target="_blank"> <small>[Paper]&nbsp;</small></a>
+				<a href="https://arxiv.org/pdf/2210.17517.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
+				<a href="https://lila.apps.allenai.org/" target="_blank"> <small>[Project]&nbsp;</small></a>
 				<a href="https://github.com/allenai/Lila" target="_blank"> <small>[Data]&nbsp;</small></a>
 				<a href="https://github.com/allenai/Lila" target="_blank"> <small>[Code]&nbsp;</small></a>
 				<a href="https://huggingface.co/allenai/bhaskara" target="_blank">
