--- a/index.html
+++ b/index.html
@@ -119,6 +119,9 @@
 					the following topics:
 				<ul>
 					<li>
+						<strong>Large language models</strong> for complex reasoning and code generation
+					</li>
+					<li>
 						<strong>Mathematical reasoning</strong> in educational scenarios (e.g., math, geometry, science)
 					</li>
 					<li>
@@ -345,7 +348,7 @@
 				<img class="img-fluid img-rounded" src="imgs/emnlp22_lila.png" style="" alt="">
 			</div>
 			<div class="col-md-9">
-				<a href="https://lila.apps.allenai.org/"  style="font-size:20pt">
+				<a href="https://lila.apps.allenai.org/" style="font-size:20pt">
 					📜
 				</a>
 				<b>
@@ -901,7 +904,7 @@
 			<h4 id="Service" style="">Program Committee Member</h3>
 				<ul>
 					<li> <strong>2023</strong>: ICLR, AAAI</li>
-					<li> <strong>2022</strong>: ICLR (<strong>Highlighted Reviewers</strong>), NeurIPS, CVPR, AAAI,
+					<li> <strong>2022</strong>: ICLR, NeurIPS, CVPR, AAAI,
 						COLING</li>
 					<li> <strong>2021</strong>: ICLR, NeurIPS, CVPR, ICCV</li>
 					<li> <strong>2020</strong>: NeurIPS </li>
@@ -925,7 +928,9 @@
 		<h3 id="Honors" style="">Selected Honors</h3>
 		<hr>
 		<ul>
+			<li><strong>NeurIPS Top Reviewer</strong>, 2022</li>
 			<li><strong>NeurIPS Scholar Award</strong>, 2022</li>
+			<li><strong>ICLR Highlighted Reviewer</strong>, 2022</li>
 			<li><strong>NeurIPS Travel Award</strong>, 2019</li>
 			<li><strong>ICCV Travel Award</strong>, 2019</li>
 			<li><strong>Outstanding Master Thesis Award</strong>, Tsinghua University, 2018</li>
