--- a/index.html
+++ b/index.html
@@ -100,14 +100,12 @@
 					Angeles.
 
 					I am a member of the <a href="https://vcla.stat.ucla.edu/" target="_blank">Center for Vision,
-						Cognition, Learning and Autonomy</a>, supervised by Professor
-					<a href="http://www.stat.ucla.edu/~sczhu/" target="_blank">Song-Chun Zhu</a>.
+						Cognition, Learning and Autonomy</a>.
 
-					I am closely working with
-					Dr. <a href="http://ashwinkalyan.com/" target="_blank">Ashwin Kalyan</a>,
-					Professor <a href="https://www.cs.columbia.edu/~zhouyu/" target="_blank">Zhou Yu</a>,
-					Professor <a href="http://web.cs.ucla.edu/~kwchang/" target="_blank">Kai-Wei Chang</a>, and
-					Professor <a href="http://www.stat.ucla.edu/~ywu/" target="_blank">Ying Nian Wu</a> at UCLA.
+					I am fortunate to be supervised by
+					Professor <a href="http://web.cs.ucla.edu/~kwchang/" target="_blank">Kai-Wei Chang</a>,
+					Professor <a href="http://www.stat.ucla.edu/~ywu/" target="_blank">Ying Nian Wu</a>,
+					and Professor <a href="http://www.stat.ucla.edu/~sczhu/" target="_blank">Song-Chun Zhu</a>.
 
 					Before that, I received my Master's degree in Computer Science at Tsinghua University, supervised by
 					Professor <a href="http://dbgroup.cs.tsinghua.edu.cn/wangjy/" target="_blank">Jianyong Wang</a>.
@@ -122,7 +120,8 @@
 						<strong>Large language models</strong> for complex reasoning and code generation
 					</li>
 					<li>
-						<strong>Mathematical reasoning</strong> in educational scenarios (e.g., math, geometry, science)
+						<strong>Mathematical reasoning</strong> in educational scenarios (e.g., math, science, and
+						geometry)
 					</li>
 					<li>
 						<strong>Trustworthy NLP models</strong> that are explainable and human-in-loop
