--- a/index.html
+++ b/index.html
@@ -171,6 +171,11 @@
 		<hr>
 		<ul>
 			<li>
+				<strong>[12/2022]&nbsp; <font color="red">New!</font></strong>
+				A survey paper on deep learning for mathematical reasoning is available at
+				<b><a href="https://arxiv.org/abs/2212.10535" target="_blank">Preprint</a></b>.
+			</li>
+			<li>
 				<strong>[10/2022]&nbsp; <font color="red">New!</font></strong>
 				Happy to receive the <b>NeurIPS 2022 Scholar Award</b>.
 			</li>
@@ -254,7 +259,7 @@
 			<li>
 				<strong>[03/2021]</strong> One paper on socially intelligent agents is submitted to <b>Preprint</b>.
 			</li>
-			<li>
+			<!-- <li>
 				<strong>[11/2019]</strong> One paper on personalized image caption is accepted to <b>AAAI 2020</b>.
 			</li>
 			<li>
@@ -268,7 +273,7 @@
 				<b>CVPR 2019</b> as an <b>
 					<font color="red">Oral Presentation</font>.
 				</b>
-			</li>
+			</li> -->
 		</ul>
 	</div><br>
 
@@ -278,6 +283,25 @@
 		<h3 id="Publications" style="">Selected Publications</h3>
 		<hr>
 		<!-- <font color="black">(* indicate equal contribution)</font><br><hr> -->
+
+		<!-- ScienceQA -->
+		<div class="row">
+			<div class="col-md-3">
+				<img class="img-fluid img-rounded" src="imgs/arxiv22_dl4math.png" style="" alt="">
+			</div>
+			<div class="col-md-9">
+				<b>
+					<font color="black">A Survey of Deep Learning for Mathematical Reasoning</font>
+				</b><br>
+				<b>Pan Lu</b>, Liang Qiu, Wenhao Yu, Sean Welleck, Kai-Wei Chang<br>
+				<b><a href="https://arxiv.org/abs/2212.10535" target="_blank">arXiv:2212.10535&nbsp;</a></b>
+				<a href="https://arxiv.org/abs/2212.10535" target="_blank"> <small>[Paper]&nbsp;</small></a>
+				<a href="papers/arxiv22_dl4math.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
+				<a href="https://github.com/lupantech/dl4math" target="_blank"> <small>[Code]&nbsp;</small></a>
+				<a href="bibs/arxiv22_dl4math.txt" target="_blank"> <small>[BibTex]</small></a><br>
+			</div>
+		</div>
+		<hr>
 
 		<!-- TabMWP -->
 		<div class="row">
