--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 					the following topics:
 				<ul>
 					<li>
-						<strong>Large language models</strong> for complex reasoning and code generation
+						<strong>Large language models</strong> for complex reasoning and content generation
 					</li>
 					<li>
 						<strong>Mathematical reasoning</strong> in educational scenarios (e.g., math, science, and
@@ -173,7 +173,14 @@
 			<li>
 				<strong>[12/2022]&nbsp; <font color="red">New!</font></strong>
 				A survey paper on deep learning for mathematical reasoning is available at
-				<b><a href="https://arxiv.org/abs/2212.10535" target="_blank">Preprint</a></b>.
+				<b><a href="https://knowledge-nlp.github.io/aaai2023/publications.html" target="_blank">Preprint</a></b>.
+			</li>
+			<li>
+				<strong>[12/2022]&nbsp; <font color="red">New!</font></strong>
+				One paper is accepted to
+				<b><a href="https://knowledge-nlp.github.io/aaai2023/publications.html" target="_blank">AAAI’23 KnowledgeNLP Workshop</a></b> 
+				as an <b><font color="red">Oral Presentation</font></b>.
+
 			</li>
 			<li>
 				<strong>[10/2022]&nbsp; <font color="red">New!</font></strong>
@@ -298,6 +305,8 @@
 				<a href="https://arxiv.org/abs/2212.10535" target="_blank"> <small>[Paper]&nbsp;</small></a>
 				<a href="papers/arxiv22_dl4math.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
 				<a href="https://github.com/lupantech/dl4math" target="_blank"> <small>[Code]&nbsp;</small></a>
+				<a href="https://twitter.com/lupantech/status/1605400505697841155" target="_blank"> <small>[Twitter]&nbsp;</small></a>
+				<a href="https://twitter.com/papers_daily/status/1607232372289724416" target="_blank"> <small>[Coverage]&nbsp;</small></a>
 				<a href="bibs/arxiv22_dl4math.txt" target="_blank"> <small>[BibTex]</small></a><br>
 			</div>
 		</div>
@@ -329,6 +338,7 @@
 				<a href="https://promptpg.github.io/explore.html" target="_blank"> <small>[Explore]&nbsp;</small></a>
 				<a href="https://promptpg.github.io/leaderboard.html" target="_blank">
 					<small>[Leaderboard]&nbsp;</small></a>
+				<a href="https://twitter.com/lupantech/status/1587848160398872576" target="_blank"> <small>[Twitter]&nbsp;</small></a>
 				<a href="bibs/arxiv22_promptpg.txt" target="_blank"> <small>[BibTex]</small></a><br>
 			</div>
 		</div>
@@ -360,6 +370,7 @@
 				<a href="https://scienceqa.github.io/explore.html" target="_blank"> <small>[Explore]&nbsp;</small></a>
 				<a href="https://scienceqa.github.io/leaderboard.html" target="_blank">
 					<small>[Leaderboard]&nbsp;</small></a>
+				<a href="https://twitter.com/lupantech/status/1570828580346802178" target="_blank"> <small>[Twitter]&nbsp;</small></a>
 				<a href="bibs/neurips22_scienceqa.txt" target="_blank"> <small>[BibTex]</small></a><br>
 			</div>
 		</div>
@@ -821,7 +832,10 @@
 		<hr>
 		<ul>
 			<li>
-				<strong>Research Intern</strong>, <em>Allen Institute for AI (AI2)</em>, 2022.3 - present <br>
+				<strong>Research Intern</strong>, <em>Microsoft Research (Redmond)</em>, 2022.12 - Present <br>
+			</li>
+			<li>
+				<strong>Research Intern</strong>, <em>Allen Institute for AI (AI2)</em>, 2022.3 - 2022.12 <br>
 				Advisors: Dr. <a href="http://ashwinkalyan.com/" target="_blank">Ashwin Kalyan</a>,
 				Dr. <a href="https://allenai.org/team/peterc" target="_blank">Peter Clark</a>
 			</li>
@@ -875,6 +889,10 @@
 		<hr>
 		<ul>
 			<li>
+				<strong>Teaching Associate</strong>, <em>ECE C247: Neural Networks and Deep Learning</em><br>
+				Graduate, UCLA, Winter 2023
+			</li>
+			<li>
 				<strong>Teaching Assistant</strong>, <em>CS 249: Data Science Fundamentals</em><br>
 				Graduate, UCLA, Fall 2022
 			</li>
@@ -926,7 +944,7 @@
 			</ul>
 			<h4 id="Service" style="">Program Committee Member</h3>
 				<ul>
-					<li> <strong>2023</strong>: ICLR, AAAI</li>
+					<li> <strong>2023</strong>: ICLR, ACL, AAAI</li>
 					<li> <strong>2022</strong>: ICLR, NeurIPS, CVPR, AAAI,
 						COLING</li>
 					<li> <strong>2021</strong>: ICLR, NeurIPS, CVPR, ICCV</li>
