--- a/index.html
+++ b/index.html
@@ -171,6 +171,12 @@
 		<hr>
 		<ul>
 			<li>
+				<strong>[01/2023]&nbsp; <font color="red">New!</font></strong>
+				One paper on in-context learning for math reasoning
+				(<b><a href="https://tabmwp.github.io/" target="_blank">PromptPG</a></b>)
+				is accepted to <b>ICLR 2023</b>.
+			</li>
+			<li>
 				<strong>[12/2022]&nbsp; <font color="red">New!</font></strong>
 				A survey paper on deep learning for mathematical reasoning is available at
 				<b><a href="https://knowledge-nlp.github.io/aaai2023/publications.html" target="_blank">Preprint</a></b>.
@@ -328,7 +334,7 @@
 				</b><br>
 				<b>Pan Lu</b>, Liang Qiu, Kai-Wei Chang, Ying Nian Wu, Song-Chun Zhu, Tanmay Rajpurohit, Peter Clark,
 				Ashwin Kalyan<br>
-				<b><a href="https://arxiv.org/abs/2209.14610" target="_blank">arXiv:2209.14610&nbsp;</a></b>
+				<b><a href="https://arxiv.org/abs/2209.14610" target="_blank">ICLR 2023&nbsp;</a></b>
 				<a href="https://arxiv.org/abs/2209.14610" target="_blank"> <small>[Paper]&nbsp;</small></a>
 				<a href="papers/arxiv22_promptpg.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
 				<a href="https://promptpg.github.io/" target="_blank"> <small>[Project]&nbsp;</small></a>
