--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 			<li>
 				<strong>[12/2022]&nbsp; <font color="red">New!</font></strong>
 				A survey paper on deep learning for mathematical reasoning is available at
-				<b><a href="https://knowledge-nlp.github.io/aaai2023/publications.html" target="_blank">Preprint</a></b>.
+				<b><a href="https://arxiv.org/abs/2212.10535" target="_blank">Preprint</a></b>.
 			</li>
 			<li>
 				<strong>[12/2022]&nbsp; <font color="red">New!</font></strong>
@@ -847,7 +847,7 @@
 			</li>
 			<li>
 				<strong>Graduate Student Researcher</strong>, <em>Center for Vision, Cognition, Learning, and
-					Autonomy</em>, <em>UCLA</em>, 2019.9 - present<br>
+					Autonomy</em>, <em>UCLA</em>, 2019.9 - Present<br>
 				Advisor: Prof. <a href="http://www.stat.ucla.edu/~sczhu/" target="_blank">Song-Chun Zhu</a>
 			</li>
 			<li>
