--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
 				<a href="https://github.com/allenai/Lila" target="_blank"> <small>[Code]&nbsp;</small></a>
 				<a href="https://huggingface.co/allenai/bhaskara" target="_blank">
 					<small>[Huggingface]&nbsp;</small></a>
-				<a href="bibs/emnlp22_unigeo.txt" target="_blank"> <small>[BibTex]</small></a><br>
+				<a href="bibs/emnlp22_lila.txt" target="_blank"> <small>[BibTex]</small></a><br>
 			</div>
 		</div>
 		<hr>
