--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
 		<!-- TabMWP -->
 		<div class="row">
 			<div class="col-md-3">
-				<img class="img-fluid img-rounded" src="imgs/arxiv22_promptpg.png" style="" alt="">
+				<img class="img-fluid img-rounded" src="imgs/iclr23_promptpg.png" style="" alt="">
 			</div>
 			<div class="col-md-9">
 				<a href="https://promptpg.github.io/">
@@ -336,7 +336,7 @@
 				Ashwin Kalyan<br>
 				<b><a href="https://arxiv.org/abs/2209.14610" target="_blank">ICLR 2023&nbsp;</a></b>
 				<a href="https://arxiv.org/abs/2209.14610" target="_blank"> <small>[Paper]&nbsp;</small></a>
-				<a href="papers/arxiv22_promptpg.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
+				<a href="papers/iclr23_promptpg.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
 				<a href="https://promptpg.github.io/" target="_blank"> <small>[Project]&nbsp;</small></a>
 				<a href="https://drive.google.com/drive/folders/1IYgGrY9agwF_qQlh4WNRG_4WF_ggTkvG?usp=sharing"
 					target="_blank"> <small>[Data]&nbsp;</small></a>
@@ -345,7 +345,7 @@
 				<a href="https://promptpg.github.io/leaderboard.html" target="_blank">
 					<small>[Leaderboard]&nbsp;</small></a>
 				<a href="https://twitter.com/lupantech/status/1587848160398872576" target="_blank"> <small>[Twitter]&nbsp;</small></a>
-				<a href="bibs/arxiv22_promptpg.txt" target="_blank"> <small>[BibTex]</small></a><br>
+				<a href="bibs/iclr23_promptpg.txt" target="_blank"> <small>[BibTex]</small></a><br>
 			</div>
 		</div>
 		<hr>
