--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
 				<a href="https://promptpg.github.io/explore.html" target="_blank"> <small>[Explore]&nbsp;</small></a>
 				<a href="https://promptpg.github.io/leaderboard.html" target="_blank">
 					<small>[Leaderboard]&nbsp;</small></a>
-				<a href="https://twitter.com/lupantech/status/1587848160398872576" target="_blank"> <small>[Twitter]&nbsp;</small></a>
+				<a href="https://twitter.com/lupantech/status/1623039527026831361" target="_blank"> <small>[Twitter]&nbsp;</small></a>
 				<a href="bibs/iclr23_promptpg.txt" target="_blank"> <small>[BibTex]</small></a><br>
 			</div>
 		</div>
@@ -817,7 +817,7 @@
 		<hr>
 		<ul>
 			<li>
-				<strong>University of California, Los Angeles</strong>, 2019.9 - present<br>
+				<strong>University of California, Los Angeles</strong>, 2019.9 - Present<br>
 				Ph.D. Student in Computer Science
 			</li>
 			<li>
@@ -838,17 +838,17 @@
 		<hr>
 		<ul>
 			<li>
-				<strong>Research Intern</strong>, <em>Microsoft Research (Redmond)</em>, 2022.12 - Present <br>
-			</li>
-			<li>
-				<strong>Research Intern</strong>, <em>Allen Institute for AI (AI2)</em>, 2022.3 - 2022.12 <br>
-				Advisors: Dr. <a href="http://ashwinkalyan.com/" target="_blank">Ashwin Kalyan</a>,
-				Dr. <a href="https://allenai.org/team/peterc" target="_blank">Peter Clark</a>
+				<strong>Research Intern</strong>, <em>Microsoft Research</em>, 2022.12 - Present <br>
 			</li>
 			<li>
 				<strong>Graduate Student Researcher</strong>, <em>Center for Vision, Cognition, Learning, and
 					Autonomy</em>, <em>UCLA</em>, 2019.9 - Present<br>
 				Advisor: Prof. <a href="http://www.stat.ucla.edu/~sczhu/" target="_blank">Song-Chun Zhu</a>
+			</li>
+			<li>
+				<strong>Research Intern</strong>, <em>Allen Institute for AI (AI2)</em>, 2022.3 - 2022.12 <br>
+				Advisors: Dr. <a href="http://ashwinkalyan.com/" target="_blank">Ashwin Kalyan</a>,
+				Dr. <a href="https://allenai.org/team/peterc" target="_blank">Peter Clark</a>
 			</li>
 			<li>
 				<strong>Research Intern</strong>, <em>Document Intelligence Group</em>, <em>Adobe Research</em>, 2021.6
@@ -880,11 +880,11 @@
 				2018.7 <br>
 				Advisor: Prof. <a href="http://dbgroup.cs.tsinghua.edu.cn/wangjy/" target="_blank">Jianyong Wang</a>
 			</li>
-			<li>
+			<!-- <li>
 				<strong>Research Intern</strong>, <em>Institute of Automation</em>, <em>Chinese Academy of
 					Sciences</em>, 2014.7 - 2014.9 <br>
 				Advisor: Prof. <a href="http://www.nlpr.ia.ac.cn/users/szli/" target="_blank">Stan Z. Li</a>
-			</li>
+			</li> -->
 		</ul>
 	</div><br>
 
@@ -975,6 +975,7 @@
 		<h3 id="Honors" style="">Selected Honors</h3>
 		<hr>
 		<ul>
+			<li><strong>AAAI Travel Award</strong>, 2023</li>
 			<li><strong>NeurIPS Top Reviewer</strong>, 2022</li>
 			<li><strong>NeurIPS Scholar Award</strong>, 2022</li>
 			<li><strong>ICLR Highlighted Reviewer</strong>, 2022</li>
@@ -1037,7 +1038,7 @@
 		</center> -->
 		<div class="row">
 			<div class="col-md-9">
-				<p align="left">&copy; Pan Lu 2022</p>
+				<p align="left">&copy; Pan Lu 2023</p>
 			</div>
 			<div class="col-md-3">
 				<script type="text/javascript" id="clustrmaps"
