add link for scienceqa

--- a/index.html
+++ b/index.html
@@ -372,6 +372,7 @@
 				<a href="https://scienceqa.github.io/" target="_blank"> <small>[Project]&nbsp;</small></a>
 				<a href="https://drive.google.com/drive/u/1/folders/1w8imCXWYn2LxajmGeGH_g5DaL2rabHev" target="_blank">
 					<small>[Data]&nbsp;</small></a>
+				<a href="https://huggingface.co/datasets/derek-thomas/ScienceQA" target="_blank"> <small>[Huggingface]&nbsp;</small></a>
 				<a href="https://github.com/lupantech/ScienceQA" target="_blank"> <small>[Code]&nbsp;</small></a>
 				<a href="https://scienceqa.github.io/explore.html" target="_blank"> <small>[Explore]&nbsp;</small></a>
 				<a href="https://scienceqa.github.io/leaderboard.html" target="_blank">
