--- a/index.html
+++ b/index.html
@@ -171,6 +171,15 @@
 		<hr>
 		<ul>
 			<li>
+				<strong>[03/2023]&nbsp; <font color="red">New!</font></strong>
+				One paper on fine-tuning
+				<b><a href="https://github.com/facebookresearch/llama" target="_blank">LLaMA</a></b>
+				 in one hour
+				(<b><a href="https://github.com/ZrrSkywalker/LLaMA-Adapter" target="_blank">LLaMA-Adapter</a></b>)
+				is available at
+				<b><a href="https://arxiv.org/abs/2212.10535" target="_blank">Preprint</a></b>.
+			</li>
+			<li>
 				<strong>[01/2023]&nbsp; <font color="red">New!</font></strong>
 				One paper on in-context learning for math reasoning
 				(<b><a href="https://tabmwp.github.io/" target="_blank">PromptPG</a></b>)
@@ -232,17 +241,17 @@
 				One paper on character animation sampling is submitted to <b>Preprint</b>.
 			</li>
 			<li>
-				<strong>[02/2022]&nbsp; <font color="red">New!</font></strong>
+				<strong>[02/2022]&nbsp;</strong>
 				Data and code for NeurIPS 2021
 				<b><a href="https://iconqa.github.io/" target="_blank">IconQA</a></b>
 				are released now!
 			</li>
 			<li>
-				<strong>[12/2021]&nbsp; <font color="red">New!</font></strong>
+				<strong>[12/2021]&nbsp;</strong>
 				Two papers are accepted to <b>AAAI 2022</b></font></b>.
 			</li>
 			<li>
-				<strong>[10/2021]&nbsp; <font color="red">New!</font></strong>
+				<strong>[10/2021]&nbsp;</strong>
 				One paper on visual question answering for icon images
 				(<b><a href="https://iconqa.github.io/" target="_blank">IconQA</a></b>)
 				is accepted to <b>NeurIPS 2021</b>.
@@ -297,12 +306,39 @@
 		<hr>
 		<!-- <font color="black">(* indicate equal contribution)</font><br><hr> -->
 
-		<!-- ScienceQA -->
+		<!-- LLaMA-Adapter -->
+		<div class="row">
+			<div class="col-md-3">
+				<img class="img-fluid img-rounded" src="imgs/arxiv23_llama.png" style="" alt="">
+			</div>
+			<div class="col-md-9">
+				<a href="https://github.com/ZrrSkywalker/LLaMA-Adapter">
+					<img src="logos/fire.png" id="logo">
+				</a>
+				<b>
+					<font color="black">LLaMA-Adapter: Efficient Fine-tuning of Language Models with Zero-init Attention					</font>
+				</b><br>
+				Renrui Zhang, Jiaming Han, Aojun Zhou, Xiangfei Hu, Shilin Yan, <b>Pan Lu</b>, Hongsheng Li, Peng Gao, Yu Qiao
+				<br>
+				<b><a href="https://arxiv.org/abs/2303.10535" target="_blank">arXiv:2303.10535&nbsp;</a></b>
+				<a href="https://arxiv.org/abs/2303.10535" target="_blank"> <small>[Paper]&nbsp;</small></a>
+				<a href="papers/arxiv23_llama.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
+				<a href="https://github.com/ZrrSkywalker/LLaMA-Adapter" target="_blank"> <small>[Code]&nbsp;</small></a>
+				<a href="https://twitter.com/lupantech/status/1605400505697841155" target="_blank"> <small>[Twitter]&nbsp;</small></a>
+				<a href="bibs/arxiv23_llama.txt" target="_blank"> <small>[BibTex]</small></a><br>
+			</div>
+		</div>
+		<hr>
+
+		<!-- Survey -->
 		<div class="row">
 			<div class="col-md-3">
 				<img class="img-fluid img-rounded" src="imgs/arxiv22_dl4math.png" style="" alt="">
 			</div>
 			<div class="col-md-9">
+				<a href="https://github.com/lupantech/dl4math">
+					<img src="logos/fire.png" id="logo">
+				</a>
 				<b>
 					<font color="black">A Survey of Deep Learning for Mathematical Reasoning</font>
 				</b><br>
@@ -325,7 +361,8 @@
 			</div>
 			<div class="col-md-9">
 				<a href="https://promptpg.github.io/">
-					<img src="logos/promptpg.png" id="logo">
+					<!-- <img src="logos/promptpg.png" id="logo"> -->
+					<img src="logos/fire.png" id="logo">
 				</a>
 				<b>
 					<font color="black">Dynamic Prompt Learning via Policy Gradient for Semi-structured Mathematical
@@ -357,7 +394,8 @@
 			</div>
 			<div class="col-md-9">
 				<a href="https://scienceqa.github.io/">
-					<img src="logos/scienceqa.png" id="logo">
+					<!-- <img src="logos/scienceqa.png" id="logo"> -->
+					<img src="logos/fire.png" id="logo">
 				</a>
 				<b>
 					<font color="black">Learn to Explain: Multimodal Reasoning via Thought Chains for Science Question
