--- a/index.html
+++ b/index.html
@@ -325,6 +325,7 @@
 				<a href="papers/arxiv23_llama.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
 				<a href="https://github.com/ZrrSkywalker/LLaMA-Adapter" target="_blank"> <small>[Code]&nbsp;</small></a>
 				<a href="https://twitter.com/lupantech/status/1640899600281395200" target="_blank"> <small>[Twitter]&nbsp;</small></a>
+				<a href="https://twitter.com/_akhaliq/status/1640884275439628288" target="_blank"> <small>[Coverage]&nbsp;</small></a>
 				<a href="bibs/arxiv23_llama.txt" target="_blank"> <small>[BibTex]</small></a><br>
 			</div>
 		</div>
