--- a/index.html
+++ b/index.html
@@ -171,6 +171,19 @@
 		<hr>
 		<ul>
 			<li>
+				<strong>[04/2023]&nbsp; <font color="red">New!</font></strong>
+				One paper on tool augmentated LLMs
+				(<b><a href="https://chameleon-llm.github.io/" target="_blank">Chameleon</a></b>)
+				is available at
+				<b><a href="https://arxiv.org/abs/2304.09842" target="_blank">Preprint</a></b>.
+			</li>
+			<li>
+				<strong>[04/2023]&nbsp; <font color="red">New!</font></strong>
+				Two papers are accepted to
+				<b><a href="https://asu-apg.github.io/odrum/" target="_blank">CVPR 2023 O-DRUM Workshop</a></b>.
+				<!-- as an <b><font color="red">Oral Presentation</font></b> -->
+			</li>
+			<li>
 				<strong>[03/2023]&nbsp; <font color="red">New!</font></strong>
 				One paper on fine-tuning
 				<b><a href="https://github.com/facebookresearch/llama" target="_blank">LLaMA</a></b>
@@ -195,8 +208,12 @@
 				One paper is accepted to
 				<b><a href="https://knowledge-nlp.github.io/aaai2023/publications.html" target="_blank">AAAI’23 KnowledgeNLP Workshop</a></b> 
 				as an <b><font color="red">Oral Presentation</font></b>.
-
 			</li>
+			<li>
+				<strong>[12/2022]&nbsp; <font color="red">New!</font></strong>
+				I am excited to join <b><a href="https://www.microsoft.com/en-us/research/" target="_blank">Microsoft Research</a></b>
+				as a research intern!
+				</li>
 			<li>
 				<strong>[10/2022]&nbsp; <font color="red">New!</font></strong>
 				Happy to receive the <b>NeurIPS 2022 Scholar Award</b>.
@@ -232,12 +249,13 @@
 				<b><a href="https://iclr.cc/Conferences/2022/Reviewers" target="_blank">Highlighted Reviewer</a></b>
 				for ICLR 2022.
 			</li>
-			<strong>[03/2022]&nbsp; <font color="red">New!</font></strong>
+			<li>
+			<strong>[03/2022]&nbsp;</strong>  
 			I am excited to join <b><a href="https://allenai.org/" target="_blank">Allen Institute for AI (AI2)</a></b>
 			as a research intern!
 			</li>
 			<li>
-				<strong>[03/2022]&nbsp; <font color="red">New!</font></strong>
+				<strong>[03/2022]&nbsp;</strong>
 				One paper on character animation sampling is submitted to <b>Preprint</b>.
 			</li>
 			<li>
@@ -305,6 +323,32 @@
 		<h3 id="Publications" style="">Selected Publications</h3>
 		<hr>
 		<!-- <font color="black">(* indicate equal contribution)</font><br><hr> -->
+
+		<!-- Chameleon -->
+		<div class="row">
+			<div class="col-md-3">
+				<img class="img-fluid img-rounded" src="imgs/arxiv23_chameleon.png" style="" alt="">
+			</div>
+			<div class="col-md-9">
+				<a href="https://chameleon-llm.github.io/">
+					<img src="logos/fire.png" id="logo">
+				</a>
+				<b>
+					<font color="black">Chameleon: Plug-and-Play Compositional Reasoning with Large Language Models</font>
+				</b><br>
+				<b>Pan Lu</b>, Baolin Peng, Hao Cheng, Michel Galley, Kai-Wei Chang, Ying Nian Wu, Song-Chun Zhu, Jianfeng Gao
+				<br>
+				<b><a href="https://arxiv.org/abs/2304.09842" target="_blank">arXiv:2304.09842&nbsp;</a></b>
+				<a href="https://chameleon-llm.github.io/" target="_blank"> <small>[Project]&nbsp;</small></a>
+				<a href="https://arxiv.org/abs/2304.09842" target="_blank"> <small>[Paper]&nbsp;</small></a>
+				<a href="papers/arxiv23_chameleon.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
+				<a href="https://github.com/lupantech/chameleon-llm" target="_blank"> <small>[Code]&nbsp;</small></a>
+				<a href="https://twitter.com/lupantech/status/1648879085115052033" target="_blank"> <small>[Twitter]&nbsp;</small></a>
+				<a href="https://twitter.com/_akhaliq/status/1648851856930533378" target="_blank"> <small>[Coverage]&nbsp;</small></a>
+				<a href="bibs/arxiv23_chameleon.txt" target="_blank"> <small>[BibTex]</small></a><br>
+			</div>
+		</div>
+		<hr>
 
 		<!-- LLaMA-Adapter -->
 		<div class="row">
@@ -794,12 +838,12 @@
 
 
 	<!-- Publications -->
-	<div class="container">
+	<!-- <div class="container">
 		<h3 id="Publications" style="">Workshop Publications</h3>
-		<hr>
+		<hr> -->
 
 		<!-- ACL21 -->
-		<div class="row">
+		<!-- <div class="row">
 			<div class="col-md-3">
 				<img class="img-fluid img-rounded" src="imgs/neuripsws21_gps.png" style="" alt="">
 			</div>
@@ -821,10 +865,10 @@
 				<a href="bibs/neuripsws21_gps.txt" target="_blank"> <small>[BibTex]</small></a><br>
 			</div>
 		</div>
-		<hr>
+		<hr> -->
 
 		<!-- NeurIPS21 -->
-		<div class="row">
+		<!-- <div class="row">
 			<div class="col-md-3">
 				<img class="img-fluid img-rounded" src="imgs/neuripsws21_iconqa.png" style="" alt="">
 			</div>
@@ -848,7 +892,7 @@
 		</div>
 		<hr>
 
-	</div><br>
+	</div><br> -->
 
 
 	<!-- Education -->
@@ -879,6 +923,9 @@
 		<ul>
 			<li>
 				<strong>Research Intern</strong>, <em>Microsoft Research</em>, 2022.12 - Present <br>
+				Advisors: Dr. <a href="https://www.microsoft.com/en-us/research/people/bapeng/" target="_blank">Baolin Peng</a>,
+				Dr. <a href="https://www.microsoft.com/en-us/research/people/mgalley/" target="_blank">Michel Galley</a>,
+				Dr. <a href="https://www.microsoft.com/en-us/research/people/jfgao/" target="_blank">Jianfeng Gao</a>
 			</li>
 			<li>
 				<strong>Graduate Student Researcher</strong>, <em>Center for Vision, Cognition, Learning, and
@@ -970,7 +1017,7 @@
 	<div class="container">
 		<h3 id="Service" style="">Professional Service</h3>
 		<hr>
-		<h4 id="Service" style="">Organizer</h3>
+		<h4 id="Service" style="">Workshops and Tutorials</h3>
 			<ul>
 				<li>
 					<strong>Primary organizer</strong>, NeurIPS 2022 Workshop on
@@ -984,21 +1031,22 @@
 						the Gap Between Research and Smart Education</a>,
 					Virtual, 2021.12
 				</li>
-				<li> <strong>Chair</strong>,
-					IEEE Student Branch at Tsinghua University, Beijing, 2015.10 - 2016.10
-				</li>
 			</ul>
 			<h4 id="Service" style="">Program Committee Member</h3>
 				<ul>
-					<li> <strong>2023</strong>: ICLR, ACL, AAAI</li>
-					<li> <strong>2022</strong>: ICLR, NeurIPS, CVPR, AAAI,
+					<li> <strong>2023</strong>: NeurIPS, ICLR, ACL, AAAI</li>
+					<li> <strong>2022</strong>: NeurIPS, ICLR, CVPR, AAAI,
 						COLING</li>
-					<li> <strong>2021</strong>: ICLR, NeurIPS, CVPR, ICCV</li>
+					<li> <strong>2021</strong>: NeurIPS, ICLR, CVPR, ICCV</li>
 					<li> <strong>2020</strong>: NeurIPS </li>
 					<li> <strong>2019 and before</strong>: AAAI, SIGKDD, ICDM, PAKDD</li>
 				</ul>
 				<h4 id="Service" style="">Journal Reviewer</h3>
 					<ul>
+						<li>
+							<a href="https://www.springer.com/journal/11263/"
+								target="_blank">International Journal of Computer Vision</a>
+						</li>
 						<li>
 							<a href="https://www.sciencedirect.com/journal/expert-systems-with-applications"
 								target="_blank">Expert Systems With Applications</a>
@@ -1008,6 +1056,12 @@
 							<a href="http://www.aas.net.cn/CN/volumn/current.shtml" target="_blank">AAS</a>
 						</li>
 					</ul>
+				<h4 id="Service" style="">Organizations</h3>
+					</ul>
+						<li> <strong>Chair</strong>,
+							IEEE Student Branch at Tsinghua University, Beijing, 2015.10 - 2016.10
+						</li>
+					</ul>
 	</div><br>
 
 	<!-- Awards -->
@@ -1015,16 +1069,16 @@
 		<h3 id="Honors" style="">Selected Honors</h3>
 		<hr>
 		<ul>
-			<li><strong>AAAI Travel Award</strong>, 2023</li>
+			<!-- <li><strong>AAAI Travel Award</strong>, 2023</li> -->
 			<li><strong>NeurIPS Top Reviewer</strong>, 2022</li>
 			<li><strong>NeurIPS Scholar Award</strong>, 2022</li>
 			<li><strong>ICLR Highlighted Reviewer</strong>, 2022</li>
-			<li><strong>NeurIPS Travel Award</strong>, 2019</li>
-			<li><strong>ICCV Travel Award</strong>, 2019</li>
+			<!-- <li><strong>NeurIPS Travel Award</strong>, 2019</li> -->
+			<!-- <li><strong>ICCV Travel Award</strong>, 2019</li> -->
 			<li><strong>Outstanding Master Thesis Award</strong>, Tsinghua University, 2018</li>
-			<li><strong>SIGKDD Travel Award</strong>, 2018</li>
+			<!-- <li><strong>SIGKDD Travel Award</strong>, 2018</li> -->
 			<li><strong>"Stars of Tomorrow" Excellent Intern Award</strong>, Microsoft Research, 2018</li>
-			<li><strong>AAAI Travel Award</strong>, 2018, 2020</li>
+			<!-- <li><strong>AAAI Travel Award</strong>, 2018, 2020</li> -->
 			<li><strong>GuangHua Scholarship Award</strong>, Tsinghua University, 2016</li>
 			<li><strong>Outstanding Undergraduate, Beijing</strong>, 2015</li>
 			<li><strong>Champion of National College Student Innovation Conference</strong>, 2014</li>
