--- a/index.html
+++ b/index.html
@@ -172,6 +172,11 @@
 		<ul>
 			<li>
 				<strong>[04/2023]&nbsp; <font color="red">New!</font></strong>
+				One tutorial proposal on mathematical reasoning is accepted to
+				<b><a href="https://ijcai-23.org/" target="_blank">IJCAI 2023</a></b>.
+			</li>
+			<li>
+				<strong>[04/2023]&nbsp; <font color="red">New!</font></strong>
 				One paper on tool augmented LLMs
 				(<b><a href="https://chameleon-llm.github.io/" target="_blank">Chameleon</a></b>)
 				is available at
@@ -1019,6 +1024,11 @@
 		<hr>
 		<h4 id="Service" style="">Workshops and Tutorials</h3>
 			<ul>
+				<li>
+					<strong>Primary speaker</strong>, IJCAI 2023 Tutorial on
+					<a href="https://ijcai-23.org/" target="_blank">Deep Learning in Mathematical Reasoning: Recent Advances and Beyond</a>,
+					Macao, 2023.08
+				</li>
 				<li>
 					<strong>Primary organizer</strong>, NeurIPS 2022 Workshop on
 					<a href="https://mathai2022.github.io/" target="_blank">MATH-AI: Toward Human-Level Mathematical
