--- a/index.html
+++ b/index.html
@@ -172,6 +172,13 @@
 		<ul>
 			<li>
 				<strong>[04/2023]&nbsp; <font color="red">New!</font></strong>
+				<b><a href="https://chameleon-llm.github.io/" target="_blank">LLaMA-Adapter-V2</a></b>, 
+				a parameter-efficient visual instruction model over LLaMA, 
+				is available at
+				<b><a href="https://arxiv.org/abs/2304.15010" target="_blank">Preprint</a></b>.
+			</li>
+			<li>
+				<strong>[04/2023]&nbsp; <font color="red">New!</font></strong>
 				One tutorial proposal on mathematical reasoning is accepted to
 				<b><a href="https://ijcai-23.org/" target="_blank">IJCAI 2023</a></b>.
 			</li>
@@ -328,6 +335,32 @@
 		<h3 id="Publications" style="">Selected Publications</h3>
 		<hr>
 		<!-- <font color="black">(* indicate equal contribution)</font><br><hr> -->
+
+		<!-- LLaMA-Adapter-V2 -->
+		<div class="row">
+			<div class="col-md-3">
+				<img class="img-fluid img-rounded" src="imgs/arxiv23_llamav2.png" style="" alt="">
+			</div>
+			<div class="col-md-9">
+				<a href="https://github.com/ZrrSkywalker/LLaMA-Adapter">
+					<img src="logos/fire.png" id="logo">
+				</a>
+				<b>
+					<font color="black">LLaMA-Adapter: Efficient Fine-tuning of Language Models with Zero-init Attention					</font>
+				</b><br>
+				Renrui Zhang, Jiaming Han, Aojun Zhou, Xiangfei Hu, Shilin Yan, <b>Pan Lu</b>, Hongsheng Li, Peng Gao, Yu Qiao
+				<br>
+				<b><a href="https://arxiv.org/abs/2304.15010" target="_blank">arXiv:2304.15010&nbsp;</a></b>
+				<a href="https://arxiv.org/abs/2304.15010" target="_blank"> <small>[Paper]&nbsp;</small></a>
+				<a href="papers/arxiv23_llamav2.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
+				<a href="https://github.com/ZrrSkywalker/LLaMA-Adapter" target="_blank"> <small>[Code]&nbsp;</small></a>
+				<a href="https://twitter.com/lupantech/status/1652022897563795456" target="_blank"> <small>[Twitter]&nbsp;</small></a>
+				<a href="https://www.youtube.com/watch?v=GAJyWkkSd8M&ab_channel=BruinTech" target="_blank"> <small>[YouTube]&nbsp;</small></a>
+				<!-- <a href="https://twitter.com/_akhaliq/status/1640884275439628288" target="_blank"> <small>[Coverage]&nbsp;</small></a> -->
+				<a href="bibs/arxiv23_llamav2.txt" target="_blank"> <small>[BibTex]</small></a><br>
+			</div>
+		</div>
+		<hr>
 
 		<!-- Chameleon -->
 		<div class="row">
