--- a/index.html
+++ b/index.html
@@ -172,8 +172,9 @@
 		<ul>
 			<li>
 				<strong>[04/2023]&nbsp; <font color="red">New!</font></strong>
-				<b><a href="https://chameleon-llm.github.io/" target="_blank">LLaMA-Adapter-V2</a></b>, 
-				a parameter-efficient visual instruction model over LLaMA, 
+				<b><a href="https://github.com/ZrrSkywalker/LLaMA-Adapter" target="_blank">LLaMA-Adapter-V2</a></b>, 
+				a parameter-efficient visual instruction model over 
+				<b><a href="https://github.com/facebookresearch/llama" target="_blank">LLaMA</a></b>, 
 				is available at
 				<b><a href="https://arxiv.org/abs/2304.15010" target="_blank">Preprint</a></b>.
 			</li>
