--- a/index.html
+++ b/index.html
@@ -337,6 +337,30 @@
 		<hr>
 		<!-- <font color="black">(* indicate equal contribution)</font><br><hr> -->
 
+		<!-- Survey -->
+		<div class="row">
+			<div class="col-md-3">
+				<img class="img-fluid img-rounded" src="imgs/acl23_dl4math.png" style="" alt="">
+			</div>
+			<div class="col-md-9">
+				<a href="https://github.com/lupantech/dl4math">
+					<img src="logos/fire.png" id="logo">
+				</a>
+				<b>
+					<font color="black">A Survey of Deep Learning for Mathematical Reasoning</font>
+				</b><br>
+				<b>Pan Lu</b>, Liang Qiu, Wenhao Yu, Sean Welleck, Kai-Wei Chang<br>
+				<b><a href="https://arxiv.org/abs/2212.10535" target="_blank">ACL 2023&nbsp;</a></b>
+				<a href="https://arxiv.org/abs/2212.10535" target="_blank"> <small>[Paper]&nbsp;</small></a>
+				<a href="papers/acl23_dl4math.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
+				<a href="https://github.com/lupantech/dl4math" target="_blank"> <small>[Code]&nbsp;</small></a>
+				<a href="https://twitter.com/lupantech/status/1605400505697841155" target="_blank"> <small>[Twitter]&nbsp;</small></a>
+				<a href="https://twitter.com/papers_daily/status/1607232372289724416" target="_blank"> <small>[Coverage]&nbsp;</small></a>
+				<a href="bibs/acl23_dl4math.txt" target="_blank"> <small>[BibTex]</small></a><br>
+			</div>
+		</div>
+		<hr>
+
 		<!-- LLaMA-Adapter-V2 -->
 		<div class="row">
 			<div class="col-md-3">
@@ -410,30 +434,6 @@
 				<a href="https://twitter.com/lupantech/status/1640899600281395200" target="_blank"> <small>[Twitter]&nbsp;</small></a>
 				<a href="https://twitter.com/_akhaliq/status/1640884275439628288" target="_blank"> <small>[Coverage]&nbsp;</small></a>
 				<a href="bibs/arxiv23_llama.txt" target="_blank"> <small>[BibTex]</small></a><br>
-			</div>
-		</div>
-		<hr>
-
-		<!-- Survey -->
-		<div class="row">
-			<div class="col-md-3">
-				<img class="img-fluid img-rounded" src="imgs/arxiv22_dl4math.png" style="" alt="">
-			</div>
-			<div class="col-md-9">
-				<a href="https://github.com/lupantech/dl4math">
-					<img src="logos/fire.png" id="logo">
-				</a>
-				<b>
-					<font color="black">A Survey of Deep Learning for Mathematical Reasoning</font>
-				</b><br>
-				<b>Pan Lu</b>, Liang Qiu, Wenhao Yu, Sean Welleck, Kai-Wei Chang<br>
-				<b><a href="https://arxiv.org/abs/2212.10535" target="_blank">arXiv:2212.10535&nbsp;</a></b>
-				<a href="https://arxiv.org/abs/2212.10535" target="_blank"> <small>[Paper]&nbsp;</small></a>
-				<a href="papers/arxiv22_dl4math.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
-				<a href="https://github.com/lupantech/dl4math" target="_blank"> <small>[Code]&nbsp;</small></a>
-				<a href="https://twitter.com/lupantech/status/1605400505697841155" target="_blank"> <small>[Twitter]&nbsp;</small></a>
-				<a href="https://twitter.com/papers_daily/status/1607232372289724416" target="_blank"> <small>[Coverage]&nbsp;</small></a>
-				<a href="bibs/arxiv22_dl4math.txt" target="_blank"> <small>[BibTex]</small></a><br>
 			</div>
 		</div>
 		<hr>
